# AIE6_midterm_challenge_suhas

./: .env.example  .gitignore  Detailed_Answers.md  Dockerfile  README.md  app.py  chainlit.md  download_data.py  insight_state.py  langgraph_visualization.txt  pyproject.toml  requirements.txt  setup.cfg  test_mermaid.py  update_design_doc.py
data_sources/analytical/: generated_analytical_example.txt  hannah_fry_mathematics_of_love_transcript.html  hannah_fry_uncertainty_unavoidable_transcript.html  pew_research_ai_views_2023.html  sagan_baloney_detection.txt
data_sources/data/: asimov_last_question.txt  examples.txt  excerpts.txt  generated_krishnamurti_freedom.txt  generated_krishnamurti_observation.txt  generated_metaphorical_example.txt  hans_christian_andersen_fairy_tales.txt  pew_research_report_ai_views_2023.txt  socrates_crito_plato.txt
data_sources/factual/: examples.txt
data_sources/feynman/: lectures.txt
data_sources/holmes/: examples.txt
finetuning/: Fine_tuning_Embedding_Model_for_RAG_InsightFlowAI.ipynb
persona_configs/: analytical.json  factual.json  feynman.json  fry.json  futuristic.json  holmes.json  metaphorical.json  philosophical.json  scientific.json
public/: insightflow.css  insightflow.js  style.css
tests/: conftest.py  test_app_logic.py  test_app_rag_toggle.py  test_app_state.py  test_chainlit_handlers.py  test_langgraph_nodes.py  test_langgraph_setup.py  test_llm_config.py  test_on_message.py  test_persona.py  test_rag_utils.py  test_visualization_utils.py
utils/: __init__.py  helpers.py  rag_utils.py  state_utils.py  visualization_utils.py
(+13 files in other folders)
