[metadata]
name = InsightFlow-AI
version = 0.1.0
description = Multi-perspective research assistant
author = Suhas
author_email = suhas@example.com
license = MIT

[options]
python_requires = >=3.11
packages = find:
install_requires =
    chainlit>=2.2.1
    langchain-community>=0.3.14
    langchain-openai>=0.2.14
    langgraph>=0.2.61
    numpy>=1.25.0,<2.0.0

[options.packages.find]
exclude =
    tests
    examples
    References*
    data*
    data_sources*
    persona_configs* 